Estructura inicial de la cabecera

--- a/blog.html
+++ b/blog.html
@@ -11,7 +11,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            Cabecera
+            CABECERA
         </div>
         <div id="post">
             <h1>Este es el título atractivo e interesante del post</h1>
