--- a/blog.html
+++ b/blog.html
@@ -11,7 +11,8 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            CABECERA
+            HyperBlog
+            <span id="tagline"> tu blog de confianza </span>
         </div>
         <div id="post">
             <h1>Este es el título atractivo e interesante del post</h1>
