--- a/blog.html
+++ b/blog.html
@@ -12,7 +12,7 @@
     <div id="container">
         <div id="cabecera">
             HyperBlog
-            <span id="tagline"> tu blog de confianza </span>
+            <span id="tagline"> tu blog de cabecera </span>
         </div>
         <div id="post">
             <h1>Este es el título atractivo e interesante del post</h1>
