--- a/blog.html
+++ b/blog.html
@@ -12,7 +12,7 @@
     <div id="container">
         <div id="cabecera">
             HyperBlog
-            <span id="tagline"> tu blog de confianza </span>
+            <span id="tagline"> tu blog de maestro </span>
         </div>
         <div id="post">
             <h1>Este es el título atractivo e interesante del post</h1>
@@ -21,6 +21,7 @@
             <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o
                 salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
             <p>Suscribete y dale like</p>
+            <p>holi</p>
         </div>
     </div>
 </body>
