cambie el titulo del blogpost
porque puedo

--- a/blog.html
+++ b/blog.html
@@ -11,7 +11,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            HyperBlog
+            Bienvenido a HyperBlog
             <span id="tagline"> tu blog de cabecera </span>
         </div>
         <div id="post">
