una versión de el hyperblog

--- a/blog.html
+++ b/blog.html
@@ -11,7 +11,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            Bienvenido a HyperBlog
+            Bienvenido a HyperBlog 2.0
             <span id="tagline"> tu blog de cabecera </span>
         </div>
         <div id="post">
