Incorporación de la img en el header

--- a/blog.html
+++ b/blog.html
@@ -11,6 +11,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
+            <img id="logo" src="IMG/dragon.png"/>
             Bienvenido a HyperBlog 2.0
             <span id="tagline"> tu blog de cabecera </span>
         </div>
