--- a/blog.html
+++ b/blog.html
@@ -19,6 +19,7 @@
             <h1>Este es el título atractivo e interesante del post no quise hacer cambios</h1>
             <p>Y este es el párrafo de inicio donde vamos a explicar las cosas incréibles que se pueden hacer con ramas
             </p>
+            <p><img src="IMG/gitlocus.png" width="100%"></p>
             <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o
                 salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
             <p>Suscribete y dale like</p>
